certifications/CKS/2-cluster-setup-and-hardening/network-policies/deny-metadata.yaml
# CONTROLPLANE_IP=$(kubectl get node controlplane -o jsonpath="{.status.addresses[0].address}")
# echo $CONTROLPLANE_IP

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-metadata
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - <controlplane-ip>/32 # Replace with the actual IP address of the controlplane node
