certifications/CKS/2-cluster-setup-and-hardening/network-policies/internal-policy.yaml
#Policy Name: internal-policy

#Policy Type: Egress
#Egress Allow: payroll
#Port: 8080

#Payroll Port: 8080
#Egress Allow: mysql
#MySQL Port: 3306

#allow egress traffic to DNS ports TCP and UDP (port 53) to enable DNS resolution from the internal pod.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              name: payroll
      ports:
        - protocol: TCP
          port: 8080

    - to:
        - podSelector:
            matchLabels:
              name: mysql
      ports:
        - protocol: TCP
          port: 3306

    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
